fixed v2 assets links in index.html

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 				<a href="#">Korean (Coming Soon)</a>
 			</nav>
 			-->
-			<span id="darkMode" onclick="toggle('#darkMode', 'assets/toggle-on.svg', 'assets/toggle-off.svg');">
-				<img src="assets/toggle-off.svg"/>
+			<span id="darkMode" onclick="toggle('#darkMode', 'assets/v2/toggle-on.svg', 'assets/v2/toggle-off.svg');">
+				<img src="assets/v2/toggle-off.svg"/>
 				<span>Dark Mode</span>
 			</span>
 			<span>
-				<img src="assets/user-circle.svg"/>
+				<img src="assets/v2/user-circle.svg"/>
 				<span onclick="window.location=window.location.pathname+'#contactUs'">Contact Us</span>
 			</span>
 			<!--
@@ -62,7 +62,7 @@
 			</nav>
 			-->
 			<span>
-				<img class="big" src="assets/online-education-7546.svg"/>
+				<img class="big" src="assets/v2/online-education-7546.svg"/>
 				<span>Student Corner</span>
 			</span>
 			<!--
@@ -75,7 +75,7 @@
 	<header>
 		<div class="left">
 			<span id="headerStudentCorner">
-				<img class="big" src="assets/online-education-7546.svg"/>
+				<img class="big" src="assets/v2/online-education-7546.svg"/>
 				<span>Student Corner</span>
 			</span>
 			<span id="webLogo">
@@ -86,7 +86,7 @@
 			</span>
 			<span id="headerResources">
 				<span>Resources</span>
-				<img src="assets/chevron-down.svg"/>
+				<img src="assets/v2/chevron-down.svg"/>
 			</span>
 			<nav id="resourcesDropdown" class="dropdown">
 				<span class="point"></span>
@@ -116,7 +116,7 @@
 				</nav>
 				<p>You will recieve top quality training through the medium of your choice. We teach students over Private Blogs, members only YouTube channel, our own Online Learning System, Whatsapp, Facebook, Direct Mail, On-campus, at-home, and any other medium of your choice.</p>
 			</article>
-			<img id="bannarImage" src="assets/thisisengineering-raeng-yhCHx8Mc-Kc-unsplash.jpg"/>
+			<img id="bannarImage" src="assets/v2/thisisengineering-raeng-yhCHx8Mc-Kc-unsplash.jpg"/>
 		</section>
 		<section id="productsCollection">
 			<article>
@@ -130,7 +130,7 @@
 			<nav class="cards" id="products">
 				<div class="card">
 					<div class="title">
-						<img class="icon" src="assets/computer-1211.svg"/>
+						<img class="icon" src="assets/v2/computer-1211.svg"/>
 						<div class="course">
 							<h1>Web Development</h1>
 							<hr>
@@ -140,14 +140,14 @@
 					<p>In this program you will go through <b>6 months</b> of <b>fast-paced training</b>. You will learn <b>Computer Programming</b> from basics to advanced. You will develop 2 <b>amazing projects</b> for your <b>Portfolio</b> that will help you get a great job!</p>
 					<hr>
 					<b>Outline</b>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Website Design</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Computer Programming</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Freelance Work</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Website Design</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Computer Programming</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Freelance Work</span></div>
 					<button class="color-button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSehPOOW56z5YxSNSFGwuWF8UkrXkChgLIJc59_Ate9YPXFF9A/viewform?usp=pp_url&entry.2092238618=Student&entry.479301265=Date-of-Birth&entry.1454137112=Your+Email+or+Phone+Number&entry.1753222212=Web-Development&entry.588393791=Your+Country&entry.2109138769=One-Time+fee+(50%25+discount)')">Join Now</button>
 				</div>
 				<div class="card">
 					<div class="title">
-						<img class="icon" src="assets/smartphone-1210.svg"/>
+						<img class="icon" src="assets/v2/smartphone-1210.svg"/>
 						<div class="course">
 							<h1>Front-End Engineering</h1>
 							<hr>
@@ -157,14 +157,14 @@
 					<p>In this program you will go through <b>12 months</b> of very <b>intensive training</b>. You will learn <b>Computer Programming</b> and <b>Web App development</b> from basics to advanced. You will develop 4 <b>amazing projects</b> for your <b>Portfolio</b>.</p>
 					<hr>
 					<b>Outline</b>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Website Development</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Software Engineering</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Graphic Design & SEO</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Website Development</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Software Engineering</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Graphic Design & SEO</span></div>
 					<button class="color-button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSehPOOW56z5YxSNSFGwuWF8UkrXkChgLIJc59_Ate9YPXFF9A/viewform?usp=pp_url&entry.2092238618=Student&entry.479301265=Date-of-Birth&entry.1454137112=Your+Email+or+Phone+Number&entry.1753222212=Front-End+Engineering&entry.588393791=Your+Country&entry.2109138769=One-Time+fee+(50%25+discount)')">Join Now</button>
 				</div>
 				<div class="card">
 					<div class="title">
-						<img class="icon" src="assets/cryptocurrency-cloud-9954.svg"/>
+						<img class="icon" src="assets/v2/cryptocurrency-cloud-9954.svg"/>
 						<div class="course">
 							<h1>Back-End Engineering</h1>
 							<hr>
@@ -174,14 +174,14 @@
 					<p>In this program you will go through <b>12 months</b> of very <b>intensive training</b>. You will learn <b>Software Engineering</b> and <b>Architecture</b> from basics to advanced. You will develop 4 <b>open-source back-end projects</b> for your <b>Portfolio</b>.</p>
 					<hr>
 					<b>Outline</b>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Server Architecture</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Cyber Security</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>IoT & Web 3.0</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Server Architecture</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Cyber Security</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>IoT & Web 3.0</span></div>
 					<button class="color-button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSehPOOW56z5YxSNSFGwuWF8UkrXkChgLIJc59_Ate9YPXFF9A/viewform?usp=pp_url&entry.2092238618=Student&entry.479301265=Date-of-Birth&entry.1454137112=Your+Email+or+Phone+Number&entry.1753222212=Back-End+Engineering&entry.588393791=Your+Country&entry.2109138769=One-Time+fee+(50%25+discount)')">Join Now</button>
 				</div>
 				<div class="card">
 					<div class="title">
-						<img class="icon" src="assets/laptop-12582.svg"/>
+						<img class="icon" src="assets/v2/laptop-12582.svg"/>
 						<div class="course">
 							<h1>Basic Computer Training</h1>
 							<hr>
@@ -191,14 +191,14 @@
 					<p>In this program you will go through <b>6 months</b> of very <b>basic training</b>. You will learn <b>MS Office</b> and <b>Social Media</b> from the basics. You will recieve assignment based training and regular guidance in using <b>MS Word</b>, <b>MS Excel</b>, <b>MS Power Point</b>, <b>Youtube for Creators</b>, and <b>Social Media for Creators</b>.</p>
 					<hr>
 					<b>Outline</b>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>MS Office</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>How to solve basic Computer Problems</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>How to make Money Online</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>MS Office</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>How to solve basic Computer Problems</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>How to make Money Online</span></div>
 					<button class="color-button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSehPOOW56z5YxSNSFGwuWF8UkrXkChgLIJc59_Ate9YPXFF9A/viewform?usp=pp_url&entry.2092238618=Student&entry.479301265=Date-of-Birth&entry.1454137112=Your+Email+or+Phone+Number&entry.1753222212=Basic+Computer+Training&entry.588393791=Your+Country&entry.2109138769=One-Time+fee+(50%25+discount)')">Join Now</button>
 				</div>
 				<div class="card">
 					<div class="title">
-						<img class="icon" src="assets/laptop-statistics-12584.svg"/>
+						<img class="icon" src="assets/v2/laptop-statistics-12584.svg"/>
 						<div class="course">
 							<h1>Business Management & Analytics</h1>
 							<hr>
@@ -208,14 +208,14 @@
 					<p>In this program you will go through <b>12 months</b> of <b>intensive training</b>. You will learn <b>Business Management</b>, <b>Business Development</b>, <b>Business Analytics</b>, and <b>E-Commerce</b> from basics to advanced. You will focus on developing your own <b>business</b> and making <b>Money</b>.</p>
 					<hr>
 					<b>Outline</b>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Startup Adminstration</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Spreadsheets & Statistics</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Business Analytics</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Startup Adminstration</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Spreadsheets & Statistics</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Business Analytics</span></div>
 					<button class="color-button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSehPOOW56z5YxSNSFGwuWF8UkrXkChgLIJc59_Ate9YPXFF9A/viewform?usp=pp_url&entry.2092238618=Student&entry.479301265=Date-of-Birth&entry.1454137112=Your+Email+or+Phone+Number&entry.1753222212=Business+Analytics&entry.588393791=Your+Country&entry.2109138769=One-Time+fee+(50%25+discount)')">Join Now</button>
 				</div>
 				<div class="card">
 					<div class="title">
-						<img class="icon" src="assets/loud-speaker-1219.svg"/>
+						<img class="icon" src="assets/v2/loud-speaker-1219.svg"/>
 						<div class="course">
 							<h1>Digital Marketing</h1>
 							<hr>
@@ -225,17 +225,17 @@
 					<p>In this program you will go through <b>12 months</b> of <b>intensive training</b>. You will learn <b>Digital Marketing</b>, <b>Social-Media Marketing</b>, <b>Graphic Desing</b>, and <b>SEO</b> from basics to advanced. You will focus on developing your own <b>Portfolio</b>, <b>Followers</b>, and making <b>Money</b>.</p>
 					<hr>
 					<b>Outline</b>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Social-Media Marketing</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Campaigns & Ad Analytics</span></div>
-					<div class="outline-item"><img src="assets/check-circle-alt.svg"/><span>Graphic Design & SEO</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Social-Media Marketing</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Campaigns & Ad Analytics</span></div>
+					<div class="outline-item"><img src="assets/v2/check-circle-alt.svg"/><span>Graphic Design & SEO</span></div>
 					<button class="color-button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSehPOOW56z5YxSNSFGwuWF8UkrXkChgLIJc59_Ate9YPXFF9A/viewform?usp=pp_url&entry.2092238618=Student&entry.479301265=Date-of-Birth&entry.1454137112=Your+Email+or+Phone+Number&entry.1753222212=Digital+Marketing&entry.588393791=Your+Country&entry.2109138769=One-Time+fee+(50%25+discount)')">Join Now</button>
 				</div>
 			</nav>
 		</section>
 		<section id="contactUs" class="contactUs-light-bg">
 			<h1>Contact Us</h1>
-			<div><img src="assets/whatsapp.svg"/><span>+92-3322-6-55-937</span></div>
-			<div><img src="assets/mail-bulk.svg"/><span><b>Noor</b>Institute<b>Of</b>Technology@gmail.com</span></div>
+			<div><img src="assets/v2/whatsapp.svg"/><span>+92-3322-6-55-937</span></div>
+			<div><img src="assets/v2/mail-bulk.svg"/><span><b>Noor</b>Institute<b>Of</b>Technology@gmail.com</span></div>
 		</section>
 	</main>
 	<footer>
