removed comments and added userprofiles link to student corner

--- a/index.html
+++ b/index.html
@@ -19,23 +19,6 @@
 <body>
 	<nav id="topNav">
 		<div class="left">
-			<!--
-			<span id="lang">
-				<img src="assets/language.svg"/>
-				<span>English</span>
-				<img src="assets/chevron-down.svg"/>
-			</span>
-			<nav id="langDropdown" class="dropdown">
-				<span class="point"></span>
-				<a href="#">English</a>
-				<a href="#">Urdu (Coming Soon)</a>
-				<a href="#">Spanish (Coming Soon)</a>
-				<a href="#">French (Coming Soon)</a>
-				<a href="#">Japanese (Coming Soon)</a>
-				<a href="#">Chinese (Coming Soon)</a>
-				<a href="#">Korean (Coming Soon)</a>
-			</nav>
-			-->
 			<span id="darkMode" onclick="toggle('#darkMode', 'assets/v2/toggle-on.svg', 'assets/v2/toggle-off.svg');">
 				<img src="assets/v2/toggle-off.svg"/>
 				<span>Dark Mode</span>
@@ -44,40 +27,17 @@
 				<img src="assets/v2/user-circle.svg"/>
 				<span onclick="window.location=window.location.pathname+'#contactUs'">Contact Us</span>
 			</span>
-			<!--
-		</div>
-		<div class="right">
-			-->
-			<!--
-			<span id="info">
-				<span>Info</span>
-				<img src="assets/chevron-down.svg"/>
-			</span>
-			<nav id="infoDropdown" class="dropdown">
-				<span class="point"></span>
-				<a href="#">About Us</a>
-				<a href="#">Join Us</a>
-				<a href="#">Contact Us</a>
-				<a href="#">Hire Us</a>
-				<a href="#">Our Resumes</a>
-			</nav>
-			-->
 			<span>
 				<img class="big" src="assets/v2/online-education-7546.svg"/>
-				<span>Student Corner</span>
+				<span onclick="window.open('https://noorinstituteoftechnology.github.io/apps/userprofile.html');">Student Corner</span>
 			</span>
-			<!--
-			<span>
-				<img src="assets/search.svg"/>
-			</span>
-			-->
 		</div>
 	</nav>
 	<header>
 		<div class="left">
 			<span id="headerStudentCorner">
 				<img class="big" src="assets/v2/online-education-7546.svg"/>
-				<span>Student Corner</span>
+				<span onclick="window.open('https://noorinstituteoftechnology.github.io/apps/userprofile.html');">Student Corner</span>
 			</span>
 			<span id="webLogo">
 				<img id="logo" src="logo.svg"/>
