--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<title>NoorTech | Noor Institute of Technology</title>
 	<!-- mind the order of stylesheets -->
 	<link rel="stylesheet" href="css/root.css">
