--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 				<img class="big" src="assets/v2/online-education-7546.svg"/>
 				<span onclick="window.open('https://noorinstituteoftechnology.github.io/apps/userprofile.html');">Student Corner</span>
 			</span>
+			<span>
+				<img class="big" src="assets/v2/online-education-7546.svg"/>
+				<span onclick="window.open('https://noorinstituteoftechnology.github.io/apps/learning-system.html');">Student Corner v2</span>
+			</span>
 		</div>
 	</nav>
 	<header>
