ace theme and mode

--- a/apps/learning-system.html
+++ b/apps/learning-system.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
-	<title>NoorTech Student Portal| Noor Institute of Technology</title>
+	<title>NoorTech Student Portal | Noor Institute of Technology</title>
 	<!-- mind the order of stylesheets -->
 	<link rel="stylesheet" href="../css/root.css">
 	<link rel="stylesheet" href="../css/topNav.css">
@@ -107,9 +107,9 @@
 	<script src="../scripts/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 	    var editor = ace.edit("mycode");
-	    //ace.config.set('basePath', "https://unpkg.com/ace-builds@1.4.6/src-noconflict")
-	    //editor.setTheme("ace/monokai");
-	    //editor.session.setMode("ace/javascript");
+	    ace.config.set('basePath', "https://unpkg.com/ace-builds@1.4.6/src-noconflict")
+	    editor.setTheme("ace/theme/monokai");
+	    editor.session.setMode("ace/mode/javascript");
 	</script>
 	<script>
 		window.onload = () => {
