changed theme to nord

--- a/apps/learning-system.html
+++ b/apps/learning-system.html
@@ -108,8 +108,8 @@
 	<script>
 	    var editor = ace.edit("mycode");
 	    ace.config.set('basePath', "https://unpkg.com/ace-builds@1.4.6/src-noconflict")
-	    editor.setTheme("ace/theme/monokai");
-	    editor.session.setMode("ace/mode/javascript");
+	    editor.setTheme("ace/theme/nord_dark");
+	    editor.session.setMode("ace/mode/html");
 	</script>
 	<script>
 		window.onload = () => {
