changed theme to xcode

--- a/apps/learning-system.html
+++ b/apps/learning-system.html
@@ -108,7 +108,7 @@
 	<script>
 	    var editor = ace.edit("mycode");
 	    ace.config.set('basePath', "https://unpkg.com/ace-builds@1.4.6/src-noconflict")
-	    editor.setTheme("ace/theme/nord_dark");
+	    editor.setTheme("ace/theme/xcode");
 	    editor.session.setMode("ace/mode/html");
 	</script>
 	<script>
