--- a/apps/learning-system.html
+++ b/apps/learning-system.html
@@ -71,20 +71,28 @@
 	</header>
 	<main>
 		<section id="lessonBox">
-			<div class="head">
+			<!--<div class="head">
 				<div class="title" id="lesssonBoxTitle">Lesson</div>
-				<!--<img src="../assets/apps/bars.svg"/>-->
-			</div>
-			<div class="body decrypt" id="lessonBoxBody">
-				<h1>Under Development</h1>
-				<p>More features coming soon</p>
+			</div>-->
+			<div class="body decrypt" id="lessonBoxBody" style="padding:0px;">
+				<iframe style="width:100%;height:100vh;" id="psudoLessons" src="https://noorinstituteoftechnology.github.io/apps/userprofile.html" frameborder="1"></iframe>
 			</div>
 		</section>
 		<section id="codeBox">
-			<section id="mycode" class="code-editor" contenteditable=true>&lt;!DOCTYPE html&gt;
+			<nav class="tool-bar" id="mycodeTools">
+				<span class="title">code</span>
+				<select id="presetCode" style="float:right;">
+					<option value="default">Default</option>
+					<option value="basicLayout">Basic Layout Example</option>
+					<option value="cssTransition">CSS Transition Example</option>
+				</select>
+				<span style="float:right;">Presets:</span>
+			</nav>
+			<section id="mycode" class="code-editor window" contenteditable=true>&lt;!DOCTYPE html&gt;
 &lt;html lang="en"&gt;
 &lt;head&gt;
 	&lt;meta charset="UTF-8"&gt;
+	&lt;meta content="width=device-width, initial-scale=1" name="viewport" /&gt;
 	&lt;title&gt;&lt;/title&gt;
 	&lt;style&gt;&lt;/style&gt;
 &lt;/head&gt;
@@ -94,6 +102,8 @@
 &lt;script&gt;&lt;/script&gt;
 &lt;/html&gt;
 			</section>
+			<nav class="tool-bar" id="mainOutputTools"><span class="title">output</span></nav>
+			<iframe id="mainOutput" class="window" srcdoc="" frameborder="0"></iframe>
 		</section>
 	</main>
 	<footer>
@@ -105,39 +115,8 @@
 		<p><b>Disclaimer:</b> Noor Institute Of Technology and Persons affiliated with it are not liable for any damages. We do not take any responsibility for any damages or losses. The courses and training are provided as is without any warranty or assurance.</p>
 	</footer>
 	<script src="../scripts/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-	<script>
-	    var editor = ace.edit("mycode");
-	    ace.config.set('basePath', "https://unpkg.com/ace-builds@1.4.6/src-noconflict")
-	    editor.setTheme("ace/theme/xcode");
-	    editor.session.setMode("ace/mode/html");
-	</script>
-	<script>
-		window.onload = () => {
-			const code = editor.getValue();
-			editor.setValue(localStorage.getItem("code") || code, -1);
-		}
-		function toggleEditorView() {
-			const codeBox = document.getElementById("codeBox");
-			const lessonBox = document.getElementById("lessonBox");
-			codeBox.style.display = codeBox.style.display !== "none" ? "none" : "flex"; 
-			lessonBox.style.flex = codeBox.style.display === "none" ? "2" : "1"; 
-		}
-		function downloadFile() {
-		  	const element = document.createElement('a');
-			const code = editor.getValue();
-			element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(code));
-		  	element.setAttribute('download', 'myWebpade.html');
-		  	element.click();
-		}
-		function viewFile() {
-			const code = editor.getValue();
-			const tab = window.open();
-			tab.document.write(code);
-		}
-		function saveFile() {
-			const code = editor.getValue();
-			localStorage.setItem("code", code);
-		}
-	</script>
+	<script src="../scripts/learning-system/presets.js"></script>
+	<script src="../scripts/learning-system/editor.js"></script>
+
 </body>
 </html>
