added css lessons code

--- a/apps/userprofile.html
+++ b/apps/userprofile.html
@@ -19,6 +19,27 @@
 			})
 		}
 	</script>
+	<style>
+	/*lesson css*/
+
+#mainLessonBoxFELesson13 > div > div > #topBottomBox {
+	top:0px;
+}
+#mainLessonBoxFELesson13 > div > div:hover > #topBottomBox {
+	top:300px;
+} 
+
+#mainLessonBoxFELesson13 > div > #assign1 {
+	height:100px;
+	width:100px;
+}
+
+#mainLessonBoxFELesson13 > div > #assign1:hover {
+	height:350px;
+	width:350px;
+}
+	</style>
+
 </head>
 <body>
 	<nav>
