--- a/apps/userprofile.html
+++ b/apps/userprofile.html
@@ -38,6 +38,30 @@
 	height:350px;
 	width:350px;
 }
+		
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+#openSans:checked ~ * {
+  font-family: 'Open Sans', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+
+#roboto:checked ~ * {
+  font-family: 'Roboto Slab', serif;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+#lato:checked ~ * {
+  font-family: 'Lato', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+#poppins:checked ~ * {
+  font-family: 'Poppins', sans-serif;
+}
 	</style>
 
 </head>
